--- a/sass/main.scss
+++ b/sass/main.scss
@@ -26,7 +26,7 @@
   justify-content: space-between;
   align-items: center;
   height: 5rem;
-  background-color: $cpc;
+  background-color: $csl-20;
 }
 
 .logo {
@@ -57,7 +57,7 @@
       }
       &::-webkit-input-placeholder {
         // prettier-ignore
-        color:$cscm-20;
+        color:$cscm-40;
       }
     }
 
@@ -71,7 +71,7 @@
     &__icon {
       width: 1.5rem;
       height: 2.5rem;
-      fill: $cscm-20;
+      fill: $cscm-15;
     }
   }
 }
@@ -98,7 +98,7 @@
   &__icon {
     width: 1.2rem;
     height: 1.2rem;
-    fill: $cscm-20;
+    fill: $cscm-15;
   }
   &__notification {
     font-size: 0.7rem;
