--- a/css/main.css
+++ b/css/main.css
@@ -177,7 +177,7 @@
 }
 
 .sidebar {
-  background-color: hsl(0, 0%, calc((var(--dui-color-scheme-contrast-l) / 100 * (-2) * 15 + 15% + var(--dui-color-scheme-contrast-l))));
+  background-color: hsl(0, 0%, calc((var(--dui-color-scheme-contrast-l) / 100 * (-2) * 25 + 25% + var(--dui-color-scheme-contrast-l))));
   -webkit-box-flex: 0;
       -ms-flex: 0 0 18%;
           flex: 0 0 18%;
@@ -334,30 +334,6 @@
           align-items: center;
 }
 
-.overview .btn-inline {
-  border: none;
-  background-color: transparent;
-  color: var(--dui-color-primary);
-  margin-right: 1.3rem;
-  margin-left: 0.2rem;
-  font-size: inherit;
-  border-bottom: 1px solid currentColor;
-  padding-bottom: 1.5px;
-  display: inline-block;
-  -webkit-transition: all 0.2s;
-  transition: all 0.2s;
-}
-
-.overview .btn-inline:hover {
-  color: hsl(0, 0%, calc((var(--dui-color-scheme-contrast-l) / 100 * (-2) * 15 + 15% + var(--dui-color-scheme-contrast-l))));
-  -webkit-animation: pulse;
-          animation: pulse;
-  -webkit-animation-duration: 0.8s;
-          animation-duration: 0.8s;
-  -webkit-animation-iteration-count: infinite;
-          animation-iteration-count: infinite;
-}
-
 .overview__rating {
   -ms-flex-item-align: stretch;
       align-self: stretch;
@@ -388,6 +364,40 @@
   font-size: 1rem;
 }
 
+.btn-inline {
+  border: none;
+  background-color: transparent;
+  color: var(--dui-color-primary);
+  margin-right: 1.3rem;
+  margin-left: 0.2rem;
+  font-size: inherit;
+  border-bottom: 1px solid currentColor;
+  padding-bottom: 1.5px;
+  display: inline-block;
+  -webkit-transition: all 0.2s;
+  transition: all 0.2s;
+}
+
+.btn-inline span {
+  margin-left: 3px;
+  -webkit-transition: margin-left 0.2s;
+  transition: margin-left 0.2s;
+}
+
+.btn-inline:hover {
+  color: hsl(0, 0%, calc((var(--dui-color-scheme-contrast-l) / 100 * (-2) * 15 + 15% + var(--dui-color-scheme-contrast-l))));
+  -webkit-animation: pulse;
+          animation: pulse;
+  -webkit-animation-duration: 0.8s;
+          animation-duration: 0.8s;
+  -webkit-animation-iteration-count: infinite;
+          animation-iteration-count: infinite;
+}
+
+.btn-inline:hover span {
+  margin-left: 8px;
+}
+
 .detail {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -396,6 +406,15 @@
 }
 
 .description {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -ms-flex-pack: distribute;
+      justify-content: space-around;
   background-color: hsl(var(--dui-color-scheme-h), var(--dui-color-scheme-s), calc(var(--dui-color-scheme-l) + 20%));
   -webkit-box-flex: 0;
       -ms-flex: 0 0 60%;
@@ -409,13 +428,6 @@
 
 .paragraph {
   font-size: inherit;
-}
-
-.user-reviews {
-  background-color: red;
-  -webkit-box-flex: 1;
-      -ms-flex-positive: 1;
-          flex-grow: 1;
 }
 
 .list {
@@ -479,5 +491,98 @@
 
 .recommend__photo:not(:last-child) {
   margin-right: -1.2rem;
+}
+
+.user-reviews {
+  margin-bottom: 0;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-flex: 1;
+      -ms-flex-positive: 1;
+          flex-grow: 1;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.review {
+  background-color: hsl(var(--dui-color-scheme-h), var(--dui-color-scheme-s), calc(var(--dui-color-scheme-l) + 20%));
+  border-radius: var(--dui-border-radius);
+  padding: 1.5rem;
+  margin-bottom: 2rem;
+  -webkit-box-shadow: 0 2rem 5rem rgba(0, 0, 0, 0.06);
+          box-shadow: 0 2rem 5rem rgba(0, 0, 0, 0.06);
+  position: relative;
+  overflow: hidden;
+}
+
+.review::before {
+  content: "\201C";
+  position: absolute;
+  top: -3.5rem;
+  left: -0.3rem;
+  font-size: 10rem;
+  color: var(--dui-color-primary);
+  opacity: 0.2;
+  font-family: Georgia, "Times New Roman", Times, serif;
+}
+
+.review__text {
+  margin-bottom: 1rem;
+  z-index: 10;
+}
+
+.review__user {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.review__user-box {
+  margin-right: auto;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+
+.review__user-name, .review__user-date {
+  margin: 0;
+}
+
+.review__user-name {
+  text-transform: uppercase;
+  font-weight: 600;
+}
+
+.review__user-date {
+  color: hsl(0, 0%, calc((var(--dui-color-scheme-contrast-l) / 100 * (-2) * 40 + 40% + var(--dui-color-scheme-contrast-l))));
+  font-size: 1.2rem;
+}
+
+.review__rating {
+  font-size: 1.8rem;
+  color: var(--dui-color-primary);
+}
+
+.review__photo {
+  width: 4.75rem;
+  height: 4.75rem;
+  border-radius: 50%;
+  margin-right: 1rem;
 }
 /*# sourceMappingURL=main.css.map */
