--- a/sass/main.scss
+++ b/sass/main.scss
@@ -133,7 +133,7 @@ $shadow-light: 0 2rem 5rem rgba(0, 0, 0, 0.06);
 }
 
 .sidebar {
-  background-color: $cscm-15;
+  background-color: $cscm-25;
   flex: 0 0 18%;
   display: flex;
   flex-direction: column;
@@ -249,25 +249,6 @@ $shadow-light: 0 2rem 5rem rgba(0, 0, 0, 0.06);
     align-items: center;
   }
 
-  .btn-inline {
-    border: none;
-    background-color: transparent;
-    color: $cp;
-    margin-right: 1.3rem;
-    margin-left: 0.2rem;
-    font-size: inherit;
-    border-bottom: 1px solid currentColor;
-    padding-bottom: 1.5px;
-    display: inline-block;
-    transition: all 0.2s;
-    &:hover {
-      color: $cscm-15;
-      animation: pulse;
-      animation-duration: 0.8s;
-      animation-iteration-count: infinite;
-    }
-  }
-
   &__rating {
     align-self: stretch;
     background-color: $cp;
@@ -288,6 +269,33 @@ $shadow-light: 0 2rem 5rem rgba(0, 0, 0, 0.06);
   }
 }
 
+.btn-inline {
+  border: none;
+  background-color: transparent;
+  color: $cp;
+  margin-right: 1.3rem;
+  margin-left: 0.2rem;
+  font-size: inherit;
+  border-bottom: 1px solid currentColor;
+  padding-bottom: 1.5px;
+  display: inline-block;
+  transition: all 0.2s;
+  span {
+    margin-left: 3px;
+    transition: margin-left 0.2s;
+  }
+
+  &:hover {
+    color: $cscm-15;
+    animation: pulse;
+    animation-duration: 0.8s;
+    animation-iteration-count: infinite;
+    span {
+      margin-left: 8px;
+    }
+  }
+}
+
 .detail {
   // font-size: 1.25rem;
   display: flex;
@@ -295,7 +303,9 @@ $shadow-light: 0 2rem 5rem rgba(0, 0, 0, 0.06);
 }
 
 .description {
-  // background-color: aqua;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
   background-color: $csl-20;
   flex: 0 0 60%;
   margin-right: 3.5rem;
@@ -306,11 +316,6 @@ $shadow-light: 0 2rem 5rem rgba(0, 0, 0, 0.06);
 
 .paragraph {
   font-size: inherit;
-}
-
-.user-reviews {
-  background-color: red;
-  flex-grow: 1;
 }
 
 .list {
@@ -356,5 +361,71 @@ $shadow-light: 0 2rem 5rem rgba(0, 0, 0, 0.06);
     &:not(:last-child) {
       margin-right: -1.2rem;
     }
+  }
+}
+
+// REVIEW //
+.user-reviews {
+  margin-bottom: 0;
+  display: flex;
+  flex-direction: column;
+  flex-grow: 1;
+  align-items: center;
+}
+
+.review {
+  background-color: $csl-20;
+  border-radius: var(--dui-border-radius);
+  padding: 1.5rem;
+  margin-bottom: 2rem;
+  box-shadow: $shadow-light;
+  position: relative;
+  overflow: hidden;
+
+  &::before {
+    content: "\201C";
+    position: absolute;
+    top: -3.5rem;
+    left: -0.3rem;
+    font-size: 10rem;
+    color: $cp;
+    opacity: 0.2;
+    font-family: Georgia, "Times New Roman", Times, serif;
+  }
+  &__text {
+    margin-bottom: 1rem;
+    z-index: 10;
+  }
+  &__user {
+    display: flex;
+    align-items: center;
+  }
+  &__user-box {
+    margin-right: auto;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+  }
+  &__user-name,
+  &__user-date {
+    margin: 0;
+  }
+  &__user-name {
+    text-transform: uppercase;
+    font-weight: 600;
+  }
+  &__user-date {
+    color: $cscm-40;
+    font-size: 1.2rem;
+  }
+  &__rating {
+    font-size: 1.8rem;
+    color: $cp;
+  }
+  &__photo {
+    width: 4.75rem;
+    height: 4.75rem;
+    border-radius: 50%;
+    margin-right: 1rem;
   }
 }
