--- a/css/main.css
+++ b/css/main.css
@@ -17,14 +17,24 @@
   background-repeat: no-repeat;
 }
 
+/*-------------------------
+      LAYOUT
+-------------------------*/
 .content-container {
-  max-width: 77rem;
-  margin: 4rem auto;
-  background-color: var(--dui-color-scheme);
-  -webkit-box-shadow: 0 2rem 6rem rgba(0, 0, 0, 0.3);
-          box-shadow: 0 2rem 6rem rgba(0, 0, 0, 0.3);
+  background-color: transparent;
+  -webkit-box-shadow: 0 2rem 5rem rgba(0, 0, 0, 0.06);
+          box-shadow: 0 2rem 5rem rgba(0, 0, 0, 0.06);
   border-radius: var(--dui-border-radius);
-  padding: 0;
+  max-width: 77rem;
+  padding-bottom: 4rem;
+  margin: 4rem auto;
+}
+
+.content {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  height: 100%;
 }
 
 /*-------------------------
@@ -164,110 +174,6 @@
   height: 2.5rem;
   border-radius: 50%;
   margin-right: 1.2rem;
-}
-
-/*-------------------------
-      SIDEBAR
--------------------------*/
-.content {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  height: 100%;
-}
-
-.sidebar {
-  background-color: hsl(0, 0%, calc((var(--dui-color-scheme-contrast-l) / 100 * (-2) * 25 + 25% + var(--dui-color-scheme-contrast-l))));
-  -webkit-box-flex: 0;
-      -ms-flex: 0 0 18%;
-          flex: 0 0 18%;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
-  padding-top: 2rem;
-}
-
-.side-nav {
-  list-style-type: none;
-  padding-left: 0;
-}
-
-.side-nav__icon {
-  width: 1.5rem;
-  height: 1.5rem;
-  fill: currentColor;
-  margin-right: 1rem;
-}
-
-.side-nav__link:link, .side-nav__link:visited {
-  text-transform: uppercase;
-  color: var(--dui-color-scheme);
-  -webkit-transition: color 1s;
-  transition: color 1s;
-  display: block;
-  padding: 1rem 2rem;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  z-index: 10;
-  position: relative;
-}
-
-.side-nav__link:hover,
-.side-nav__item--active > .side-nav__link {
-  color: var(--dui-color-primary-contrast);
-}
-
-.side-nav__item {
-  position: relative;
-}
-
-.side-nav__item:not(:last-child) {
-  margin-bottom: 0.3rem;
-}
-
-.side-nav__item::before {
-  -webkit-transition: width 0.4s cubic-bezier(1, 0, 0, 1) 0.2s, background-color 0.1s, -webkit-transform 0.2s;
-  transition: width 0.4s cubic-bezier(1, 0, 0, 1) 0.2s, background-color 0.1s, -webkit-transform 0.2s;
-  transition: transform 0.2s, width 0.4s cubic-bezier(1, 0, 0, 1) 0.2s, background-color 0.1s;
-  transition: transform 0.2s, width 0.4s cubic-bezier(1, 0, 0, 1) 0.2s, background-color 0.1s, -webkit-transform 0.2s;
-  content: "";
-  position: absolute;
-  top: 0;
-  bottom: 0;
-  left: 0;
-  right: 0;
-  height: 100%;
-  width: 5px;
-  background-color: var(--dui-color-primary);
-  -webkit-transform: scaleY(0);
-          transform: scaleY(0);
-}
-
-.side-nav__item:hover::before, .side-nav__item--active::before {
-  width: 100%;
-  -webkit-transform: scaleY(1);
-          transform: scaleY(1);
-}
-
-.side-nav__item:active::before {
-  background-color: hsl(var(--dui-color-primary-h), var(--dui-color-primary-s), calc(var(--dui-color-primary-l) + 5%));
-}
-
-.legal {
-  color: var(--dui-color-scheme);
-  text-align: center;
-  font-size: 1rem;
 }
 
 /*-------------------------
