--- a/sass/main.scss
+++ b/sass/main.scss
@@ -11,15 +11,24 @@ $shadow-light: 0 2rem 5rem rgba(0, 0, 0, 0.06);
   background-repeat: no-repeat;
 }
 
+/*-------------------------
+      LAYOUT
+-------------------------*/
+
 .content-container {
-  max-width: 77rem;
-  margin: 4rem auto; // center ver & hor
-  background-color: $cs;
-  box-shadow: 0 2rem 6rem rgba(0, 0, 0, 0.3);
+  background-color: transparent;
+  box-shadow: $shadow-light;
   border-radius: var(--dui-border-radius);
-  padding: 0;
+
+  max-width: 77rem;
+  padding-bottom: 4rem;
+  margin: 4rem auto; // center ver & hor
 }
 
+.content {
+  display: flex;
+  height: 100%;
+}
 /*-------------------------
       HEADER
 -------------------------*/
@@ -123,85 +132,6 @@ $shadow-light: 0 2rem 5rem rgba(0, 0, 0, 0.06);
     margin-right: 1.2rem;
   }
 }
-
-/*-------------------------
-      SIDEBAR
--------------------------*/
-.content {
-  display: flex;
-  height: 100%;
-}
-
-.sidebar {
-  background-color: $cscm-25;
-  flex: 0 0 18%;
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-  padding-top: 2rem;
-}
-
-.side-nav {
-  list-style-type: none;
-  padding-left: 0;
-
-  &__icon {
-    width: 1.5rem;
-    height: 1.5rem;
-    fill: currentColor;
-    margin-right: 1rem;
-  }
-
-  &__link:link,
-  &__link:visited {
-    text-transform: uppercase;
-    color: $cs;
-    transition: color 1s;
-    display: block;
-    padding: 1rem 2rem;
-    display: flex;
-    align-items: center;
-    z-index: 10;
-    position: relative; // z-index requires position
-  }
-
-  &__link:hover,
-  &__item--active > &__link {
-    color: $cpc;
-  }
-
-  &__item {
-    position: relative;
-    &:not(:last-child) {
-      margin-bottom: 0.3rem;
-    }
-    &::before {
-      transition: transform 0.2s, width 0.4s cubic-bezier(1, 0, 0, 1) 0.2s,
-        background-color 0.1s;
-      content: "";
-      @include abs_pos();
-      height: 100%;
-      width: 5px;
-      background-color: $cp;
-      transform: scaleY(0);
-    }
-    &:hover::before,
-    &--active::before {
-      width: 100%;
-      transform: scaleY(1);
-    }
-    &:active::before {
-      background-color: $cpl-5;
-    }
-  }
-}
-
-.legal {
-  color: $cs;
-  text-align: center;
-  font-size: 1rem;
-}
-
 /*-------------------------
       MAIN CONTENT
 -------------------------*/
